# Smart_stock

./: .gitignore  404.html  README.md  index.html  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/raw/: synthetic_retail_demand.csv
notebooks/: README.md
src/smartstock/: __init__.py  baseline.py  classical.py  config.py  data.py  features.py  inventory.py  metrics.py  modeling.py  pipeline.py
tests/: test_data.py  test_inventory.py  test_modeling.py
