[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartstock"
version = "0.1.0"
description = "Demand forecasting and inventory intelligence portfolio project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.18",
  "scikit-learn>=1.4",
  "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
benchmark = [
  "statsmodels>=0.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

